--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "lodash": "^4.17.15",
     "mobile-detect": "^1.4.4",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
     "prism-themes": "^1.3.0",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
@@ -52,6 +51,7 @@
     "react-share": "^4.0.1",
     "react-typography": "^0.16.19",
     "redux": "^4.0.4",
+    "sass": "^1.53.0",
     "theme-ui": "^0.3.1",
     "typography": "^0.16.19"
   },
